# ROS-UR5-APLA

./: .gitignore
devel/: .catkin  setup.fish  setup.sh
src/duet3_control/: CMakeLists.txt  package.xml
src/duet3_control/scripts/: http_client.py
src/fdm_msgs/: CMakeLists.txt  package.xml
src/gcode_interpreter/: CMakeLists.txt  package.xml
src/gcode_interpreter/gcode/: RepetitiveSquares.gcode  VibrationSquare.gcode  practicePart.gcode  practicePartReduced.gcode  practicePartv2.gcode  test.gcode
src/gcode_interpreter/scripts/: gcode_loader.py  main.py
src/ur5_apla/: CMakeLists.txt  package.xml
src/ur5_apla_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
src/ur5_apla_moveit_config/config/: calibration.yaml  fake_controllers.yaml  gazebo_ur5_apla_with_printhead.urdf  joint_limits.yaml  ompl_planning.yaml  stomp_planning.yaml  ur5_apla_with_printhead.srdf
src/ur5_apla_moveit_config/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  move_group.launch  moveit.rviz  moveit_planning_execution.launch  ompl-chomp_planning_pipeline.launch.xml  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  simple_moveit_controller_manager.launch.xml  stomp_planning_pipeline.launch.xml  trajectory_execution.launch.xml  ur5_apla_with_printhead_moveit_controller_manager.launch.xml
src/ur5_apla_moveit_config/scripts/: singlePose.py  toolpath_plan.py  world_constraints.py
(+103 files in other folders)
